Store the test a run declares, instead of quietly discarding it
Three of the four ways a run enters this platform accepted a declared test
and threw it away. Found by using the feature the way it is meant to be
used: a real Gatling bundle submitted through the on-prem runner's own
endpoint, executed by the real runner, streamed as a real simulation.log.
`runner_job.test_slug` was `checkout-soak`; the run it produced had
`declared_test_slug` NULL and had grouped by simulation class — the exact
behaviour that declaring a test exists to replace, which is why nothing
looked wrong.

TWO CAUSES, AND THE SECOND IS NOT A RUNNER BUG.

`RunRepository.createLive` declared `declaredTestSlug` in
`CreateLiveRunInput` and never wrote it into `prisma.run.create`. `create`
— the bundle-upload path, the method directly above it — always had the
line. So the live open, the Gatling plugin's live mode and the on-prem
runner all resolved by simulation class instead. Verified independently of
the runner: `POST /v1/runs/live` with `test: "live-declared-probe"`
answered 201 and stored NULL.

The runner was broken twice over. `live-sink.ts` built its metadata as
`...(job.job.testSlug ? { test: job.job.testSlug } : {})`, and the field is
`declaredTestSlug` — `test` is not a member of `CreateLiveRunInput` at all.
It compiled because TypeScript's excess-property check applies to object
LITERALS and a spread is not one, so a mistyped key hidden in a spread is
accepted in silence. The four frozen-metadata fields are named directly in
the literal now, which is what puts them back in front of the compiler:
re-introducing the typo is rejected with `'test' does not exist in type
'CreateLiveRunInput'`.

WHY EVERY GATE WAS GREEN. No test file referenced `DeclaredTestSlugSchema`
or `TEST_SLUG_PATTERN` at all. `test-entity.integration.test.ts` drove
`resolveTestId` directly and proved it honours a declared slug — with the
slug handed to it by the test itself. That proves the CONSUMER, never the
seam. The